footer-section, side-cart section added, home page responsive, collection page added

--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -124,7 +124,7 @@
     margin: 0;
     cursor: pointer;
     background-color: transparent;
-    color: var(--btn-color);
+    color: var(--black);
     height: 100%;
     padding: 10px 10px;
     transition: ease .3s;
