--- a/assets/css/collections.css
+++ b/assets/css/collections.css
@@ -1,6 +1,6 @@
 /* collection section css start */
 .collection-section .container {
-    max-width: 1680px;
+    /* max-width: 1680px; */
 }
 
 .collection-wrapper {
@@ -10,7 +10,7 @@
 }
 
 .collection-filter {
-    width: 20%;
+    width: 21%;
     position: sticky;
     height: fit-content;
     top: 80px;
