--- a/assets/css/common-banner.css
+++ b/assets/css/common-banner.css
@@ -3,7 +3,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    margin: 68px 0 0 0;
+    margin: 110px 0 0 0;
     background-color: rgba(0, 0, 0, 0.5);
     background-blend-mode: color;
 }
@@ -21,6 +21,10 @@
 }
 
 .common-banner-content .section-heading {
+    color: var(--white);
+}
+
+.common-banner-content .section-heading-text {
     color: var(--white);
 }
 
