--- a/assets/css/pagination.css
+++ b/assets/css/pagination.css
@@ -7,7 +7,7 @@
 }
 
 .pagination a {
-    color: var(--btn-color);
+    color: var(--black);
     font-size: 16px;
     font-weight: 500;
     font-family: var(--paragraph-font);
