--- a/assets/css/single-banner-section.css
+++ b/assets/css/single-banner-section.css
@@ -6,4 +6,29 @@
     background-size: cover;
     height: 441px;
 }
+
 /* single-banner section css end */
+
+@media only screen and (max-width: 992px) {
+    /* single-banner section css end */
+    .single-banner-section {
+        height: 200px;
+    }
+    /* single-banner section css end */
+}
+
+@media only screen and (max-width: 767px) {
+    /* single-banner section css end */
+    .single-banner-section {
+        height: 150px;
+    }
+    /* single-banner section css end */
+}
+
+@media only screen and (max-width: 575px) {
+    /* single-banner section css end */
+    .single-banner-section {
+        height: 100px;
+    }
+    /* single-banner section css end */
+}
