--- a/assets/css/collections.css
+++ b/assets/css/collections.css
@@ -1,6 +1,28 @@
 /* collection section css start */
-.collection-section .container {
-    /* max-width: 1680px; */
+.collection-heading-wrapper {
+    position: relative;
+    text-align: center;
+    margin: 0 0 60px 0;
+}
+
+.collection-heading-wrapper::after {
+    position: absolute;
+    content: "";
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: var(--brand-color);
+}
+
+.collection-heading-title {
+    text-transform: uppercase;
+    text-align: center;
+    background-color: var(--body-color);
+    position: relative;
+    z-index: 1;
+    padding: 0 50px;
+    display: inline-block;
 }
 
 .collection-wrapper {
@@ -10,16 +32,17 @@
 }
 
 .collection-filter {
-    width: 21%;
-    position: sticky;
-    height: fit-content;
-    top: 80px;
-    left: 0;
-    transition: all ease 3s;
+    position: fixed;
+    z-index: 9999;
+    height: 100vh;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    transition: all ease .3s;
 }
 
 .collection-content {
-    width: 77%;
+    width: 100%;
 }
 
 .collection-top {
@@ -29,15 +52,15 @@
     margin: 0 0 20px 0;
 }
 
-.collection-filter-btn{
+.collection-filter-btn {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 20px;
 }
 
-.filter-open-btn{
-    display: none;
+.filter-open-btn {
+    display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
@@ -52,46 +75,52 @@
 
 /* collection filter css start */
 
+.collection-filter.active {
+    left: 0;
+}
+
+.filter-window-close-btn {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: block;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1;
+    transition: all ease .3s;
+    user-select: none;
+}
+
+.collection-filter.active .filter-window-close-btn {
+    opacity: 1;
+    visibility: visible;
+}
+
 .filter-select-field {
     position: relative;
     border: 1px solid var(--border-color);
     display: inline-block;
 }
 
-.filter-select-field select {
-    font-size: 14px;
-    font-weight: 500;
-    font-family: var(--paragraph-font);
-    padding: 11px 60px 11px 10px;
-}
-
-.filter-select-field-icon {
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-    z-index: -1;
-}
-
-.filter-select-field-icon i {
-    color: var(--brand-color);
-    font-size: 14px;
-}
-
 .filter-box {
-    padding: 20px;
+    position: relative;
+    background-color: var(--body-color);
     box-shadow: 0 0 20px 0px rgb(0 0 0 / 10%);
+    width: 340px;
+    z-index: 2;
+    height: 100%;
+    padding: 20px;
 }
 
 .filter-sidebar-heading {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 10px 0 26px 0;
-}
-
-.mobile-filter-heading.filter-sidebar-heading {
-    display: none;
     margin: 0 10px 20px 10px;
 }
 
@@ -99,13 +128,15 @@
     cursor: pointer;
 }
 
-.filter-window-close-btn{
-    display: none;
-}
-
 .filter-close-btn i {
     color: var(--brand-color);
     font-size: 22px;
+}
+
+.filter-accordion {
+    height: calc(100% - 50px);
+    overflow-y: auto;
+    scrollbar-width: thin;
 }
 
 .filter-accordion-item {
@@ -236,11 +267,9 @@
     transform: rotate(45deg);
 }
 
-/* collection filter css end */
-
 .product-items {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 30px;
 }
 
@@ -249,89 +278,9 @@
 @media only screen and (max-width: 1200px) {
 
     /* colection section css start */
-    .collection-filter {
-        width: 25%;
-    }
-
-    .collection-content {
-        width: 72%;
-    }
-
     .product-items {
         gap: 24px;
     }
-
-    .collection-filter {
-        width: 25%;
-    }
-
-    /* colection section css end */
-}
-
-@media only screen and (max-width: 992px) {
-
-    /* colection section css start */
-    .filter-open-btn{
-        display: flex;
-    }
-
-    .collection-filter {
-        position: fixed;
-        z-index: 9999;
-        height: 100vh;
-        top: 0;
-        left: -100%;
-        width: 100%;
-        transition: all ease .3s;
-    }
-
-    .collection-filter.active{
-        left: 0;
-    }
-    
-    .filter-window-close-btn{
-        position: fixed;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.3);
-        display: block;
-        opacity: 0;
-        visibility: hidden;
-        z-index: 1;
-        transition: all ease .3s;
-        user-select: none;
-    }
-
-    .collection-filter.active .filter-window-close-btn{
-        opacity: 1;
-        visibility: visible;
-    }
-
-    .filter-box {
-        position: relative;
-        background-color: var(--white);
-        box-shadow: 0 0 20px 0px rgb(0 0 0 / 10%);
-        width: 340px;
-        z-index: 2;
-        height: 100%;
-    }
-
-    .collection-content {
-        width: 100%;
-    }
-
-    .filter-sidebar-heading {
-        display: none;
-    }
-
-    .mobile-filter-heading.filter-sidebar-heading {
-        display: flex;
-    }
-
     /* colection section css end */
 }
 
@@ -341,18 +290,23 @@
     .product-items {
         column-gap: 16px;
         row-gap: 24px;
+        grid-template-columns: repeat(3, 1fr);
     }
+    /* colection section css end */
+}
 
+@media only screen and (max-width: 767px) {
+
+    /* colection section css start */
+    .product-items {
+        grid-template-columns: repeat(2, 1fr);
+    }
     /* colection section css end */
 }
 
 @media only screen and (max-width: 575px) {
 
     /* colection section css start */
-    .product-items {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
     .collection-filter-btn {
         gap: 10px;
     }
@@ -377,4 +331,3 @@
 
     /* colection section css end */
 }
-
