--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -80,15 +80,13 @@
     --heading-text-color: #000000;
     --paragraph-text-color: #000000;
     --brand-color: #64493F;
-    --item-bg: #f3f3f3;
-    --section-bg: #f3f3f3;
     --card-bg: #F5F1F1;
+    --section-bg: #F5F1F1;
     --border-color: #000000;
-    --border-color2: #242833;
-    --text-muted: #777777;
+    --text-muted: #c7c7c7;
     --btn-color: #fff;
     --btn-bg: #000;
-    --card-badge-bg: #242833;
+    --card-badge-bg: #000;
     --body-color: #F7F7F7;
 
     /* font family */
@@ -117,6 +115,10 @@ body {
 body.active {
     overflow: hidden;
     transition: all ease .7s;
+}
+
+main{
+    margin: 80px 0 0 0;
 }
 
 ul,
@@ -187,7 +189,8 @@ p {
 }
 
 .container {
-    max-width: 100%;
+    width: 100%;
+    max-width: 1920px;
     padding: 0 20px;
     margin: 0 auto;
 }
@@ -248,9 +251,9 @@ button {
 }
 
 .btn {
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 600;
-    padding: 10px 30px;
+    padding: 15px 30px;
     transition: ease .3s;
     font-family: var(--paragraph-font);
     text-transform: uppercase;
@@ -357,7 +360,7 @@ button {
     width: 16px;
     height: 16px;
     background-color: transparent;
-    border: 1px solid var(--border-color2);
+    border: 1px solid var(--border-color);
     position: relative;
     opacity: 1;
 }
@@ -383,7 +386,7 @@ button {
 .swiper-button-next {
     width: 50px;
     height: 50px;
-    border: 1px solid var(--border-color2);
+    border: 1px solid var(--border-color);
     color: var(--white);
     background-color: var(--btn-bg);
     transition: ease .3s;
@@ -391,8 +394,7 @@ button {
 
 .swiper-button-prev:hover,
 .swiper-button-next:hover {
-    border: 1px solid var(--border-color2);
-    color: var(--btn-color);
+    color: var(--black);
     background-color: var(--white);
 }
 
@@ -404,7 +406,7 @@ button {
 
 .swiper-button-prev:hover::after,
 .swiper-button-next:hover::after {
-    color: var(--btn-color);
+    color: var(--black);
 }
 
 .swiper-button-next {
@@ -741,7 +743,7 @@ button {
 
 /* navbar section css start */
 .navbar {
-    height: 110px;
+    height: 80px;
     background-color: var(--body-color);
     position: fixed;
     top: 0;
@@ -764,6 +766,9 @@ button {
     align-items: center;
     height: 100%;
     padding: 0 20px;
+    max-width: 1920px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .ham-menu {
@@ -968,10 +973,10 @@ button {
 .search-bar {
     position: fixed;
     left: 0;
-    top: 0;
+    top: -5px;
     right: 0;
     width: 100vw;
-    height: 110px;
+    height: 80px;
     background-color: var(--body-color);
     z-index: 999;
     display: flex;
@@ -983,6 +988,7 @@ button {
 
 .search-bar.active {
     transform: translateY(0);
+    top: 0;
 }
 
 .search-close-btn {
@@ -1006,7 +1012,7 @@ button {
 .search-bar-window-close-btn {
     position: fixed;
     left: 0px;
-    top: 110px;
+    top: 80px;
     right: 0px;
     bottom: 0px;
     z-index: -1;
@@ -1301,6 +1307,7 @@ a.footer-mail {
 .copyright-area {
     padding: 20px 0;
     background-color: var(--brand-color);
+    border-top: 1px solid rgba(247, 247, 247, 0.1);
 }
 
 .copyright-content {
@@ -1430,6 +1437,10 @@ a.footer-mail {
 
     .section-heading-wrapper {
         margin-bottom: 25px;
+    }
+
+    main {
+        margin: 60px 0 0 0;
     }
 
     /* common css end */
