--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -1,10 +1,6 @@
 /* product section css start */
 .product-breadcrumb {
-    margin: 90px 0 0 0;
-}
-
-.product-breadcrumb .container {
-    max-width: 1680px;
+    padding: 10px 0 0 0;
 }
 
 .product-breadcrumb .breadcrumb {
@@ -22,10 +18,6 @@
 
 .section.product-section {
     padding-top: 20px;
-}
-
-.product-section .container {
-    max-width: 1680px;
 }
 
 .product-page-content-wrap {
@@ -68,7 +60,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    border: 2px solid var(--border-color2);
+    border: 2px solid var(--border-color);
     opacity: 0;
     visibility: hidden;
     transition: all ease .3s;
@@ -94,17 +86,14 @@
     background-color: var(--card-bg);
 }
 
-/* .swiper.product-slider .product-slider-img img {
-    object-fit: contain;
-} */
-
 .product-content-area {
     width: 30%;
 }
 
 .product-title {
-    font-weight: 300;
-    text-transform: capitalize;
+    font-weight: 400;
+    text-transform: uppercase;
+    font-size: 24px;
 }
 
 .product-price-wrap {
@@ -221,12 +210,12 @@
 }
 
 .product-varient-label:hover {
-    border-color: var(--border-color2);
+    border-color: var(--border-color);
 }
 
 .product-varient-input-field input[type="radio"]:checked~.product-varient-label {
     background-color: var(--btn-bg);
-    border-color: var(--border-color2);
+    border-color: var(--border-color);
 }
 
 .product-varient-input-field input[type="radio"]:checked~.product-varient-label .varient-value {
@@ -243,17 +232,92 @@
     text-decoration: line-through;
 }
 
+.product-color-varient-field-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.product-color-varient-input-field {
+    position: relative;
+    cursor: pointer;
+}
+
+.product-color-varient-input {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) !important;
+    width: 0;
+    height: 0;
+    opacity: 0;
+    visibility: hidden;
+    user-select: none;
+}
+
+.product-color-varient-label {
+    cursor: pointer;
+    overflow: hidden;
+    background-color: var(--white);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid var(--text-muted);
+    text-align: center;
+    user-select: none;
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+}
+
+.color-varient-value {
+    width: 22px;
+    height: 22px;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+    display: block;
+}
+
+.product-color-varient-input-field:first-child .color-varient-value{
+    background-color: var(--brand-color);
+}
+
+.product-color-varient-input-field:nth-child(2) .color-varient-value{
+    background-color: #f2840f;
+}
+
+.product-color-varient-input-field:nth-child(3) .color-varient-value{
+    background-color: #ff0000;
+}
+
+.product-color-varient-input-field:nth-child(4) .color-varient-value{
+    background-color: #8484f6;
+}
+
+.product-color-varient-input-field:last-child .color-varient-value{
+    background-color: #e48695;
+}
+
+.product-color-varient-input-field input[type="radio"]:checked+.product-color-varient-label{
+    border-color: var(--black);
+}
+
 .product-btn-area {
     margin: 20px 0 0 0;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 20px;
 }
 
-.product-quantity {
+.product-btn-area .product-quantity {
     border: 1px solid var(--border-color);
     display: inline-flex;
     align-items: center;
+    max-width: 150px;
+    width: 100%;
 }
 
 .product-btn-area .quantity-decrease,
@@ -331,10 +395,9 @@
     transition: ease .3s;
 }
 
-.product-accordion-item .item-title-wrapper .icon .plus-icon i,
-.product-accordion-item .item-title-wrapper .icon .minus-icon i {
+.product-accordion-item .item-title-wrapper .icon .plus-icon i, .product-accordion-item .item-title-wrapper .icon .minus-icon i {
     font-size: 14px;
-    color: var(--btn-color);
+    color: var(--black);
 }
 
 .product-accordion-item .item-title-wrapper .icon .minus-icon {
@@ -352,7 +415,7 @@
 }
 
 .product-accordion-item-content ul {
-    margin-left: 18px;
+    margin: 10px 0 0 30px;
 }
 
 .product-accordion-item-content ul li {
@@ -367,6 +430,7 @@
 .product-accordion-item-content ul li p,
 .product-accordion-item-content .content p {
     font-size: 14px;
+    font-weight: 600;
     line-height: 20px;
 }
 
@@ -396,24 +460,66 @@
 }
 
 .masurement-modal-content {
-    width: 550px;
+    width: 500px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: var(--white);
     padding: 20px;
+    overflow-y: auto;
+    height: calc(100vh - 100px);
+    scrollbar-width: thin;
 }
 
 .modal-content-top {
-    padding: 0 0 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
+}
+
+.modal-content-title {
+    text-align: center;
+    margin: 0 0 24px 0;
+}
+
+.modal-content-inner{
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content-img {
+    width: 50%;
+}
+
+.modal-content{
+    width: 45%;
+}
+
+.modal-content p {
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 18px;
+}
+
+.modal-content ul{
+    margin: 10px 0 0 0;
+}
+
+.modal-content ul li{
+    margin: 5px 0 0 0;
+}
+
+.modal-content ul li:first-child{
+    margin: 0;
 }
 
 .measurement-guide-content {
     width: 100%;
+    max-width: 300px;
+    margin: 20px auto 0;
 }
 
 .measurement-guide-content,
@@ -421,7 +527,7 @@
 .measurement-guide-content td {
     border: 1px solid var(--border-color);
     border-collapse: collapse;
-    padding: 20px;
+    padding: 5px;
     text-align: center;
     font-size: 16px;
     color: var(--brand-color);
@@ -519,10 +625,6 @@
 @media only screen and (max-width: 575px) {
 
     /* product section css start */
-    .product-breadcrumb {
-        margin: 75px 0 0 0;
-    }
-
     .section.product-section {
         padding-top: 15px;
     }
@@ -605,6 +707,15 @@
 
     .masurement-modal-content {
         width: 350px;
+    }
+
+    .modal-content-inner {
+        gap: 20px;
+        flex-direction: column;
+    }
+
+    .modal-content {
+        width: 100%;
     }
 
     /* product section css end */
