--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -1,93 +1,48 @@
 /* product section css start */
-.product-breadcrumb {
-    padding: 10px 0 0 0;
-}
-
-.product-breadcrumb .breadcrumb {
-    justify-content: flex-start;
-}
-
-.product-breadcrumb .breadcrumb li a,
-.product-breadcrumb .breadcrumb li span {
-    color: var(--paragraph-text-color);
-}
-
-.product-breadcrumb .breadcrumb li .breadcrumb-icon i {
-    color: var(--paragraph-text-color);
-}
-
-.section.product-section {
+.product-section {
     padding-top: 20px;
-}
-
-.product-page-content-wrap {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-}
-
-.product-slider-area {
-    width: 65%;
-}
-
-.product-slider-inner {
-    display: flex;
-    flex-direction: row-reverse;
-    gap: 20px;
-    height: 745px;
-    user-select: none;
-}
-
-.swiper.product-slider-thumb {
-    width: 12%;
-}
-
-.swiper.product-slider {
-    width: 88%;
-}
-
-.product-slider-thumb .swiper-slide {
-    cursor: pointer;
     position: relative;
-    opacity: 0.7;
-    transition: all ease .3s;
 }
 
-.product-slider-thumb .swiper-slide::before {
+.brand-icon{
+    position: absolute;
+    left: 50%;
+    top: 20px;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+
+.product-section::after{
     position: absolute;
     content: "";
     top: 0;
     left: 0;
     bottom: 0;
-    right: 0;
-    border: 2px solid var(--border-color);
-    opacity: 0;
-    visibility: hidden;
-    transition: all ease .3s;
-    z-index: 1;
-}
-
-.product-slider-thumb .swiper-slide.swiper-slide-thumb-active::before {
-    opacity: 1;
-    visibility: visible;
-}
-
-.product-slider-thumb .swiper-slide:hover::before {
-    opacity: 1;
-    visibility: visible;
-}
-
-.product-slider-thumb .swiper-slide.swiper-slide-thumb-active {
-    opacity: 1;
-}
-
-.product-slider-img {
+    width: 50%;
     height: 100%;
     background-color: var(--card-bg);
+    z-index: -1;
+}
+
+.product-page-content-wrap {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
 }
 
 .product-content-area {
-    width: 30%;
+    max-width: 420px;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.single-product-content-top {
+    padding: 0 0 34px 0;
+    border-bottom: 1px solid var(--border-color);
 }
 
 .product-title {
@@ -101,38 +56,12 @@
     display: flex;
     align-items: center;
     gap: 16px;
+    justify-content: center;
 }
 
 .previous-price {
     text-decoration: line-through;
     font-weight: 300;
-}
-
-.product-description {
-    margin: 20px 0 0 0;
-    font-size: 14px;
-}
-
-.product-info {
-    margin: 20px 0 0 0;
-}
-
-.product-info tr td {
-    padding: 5px 10px 5px 0;
-    text-transform: capitalize;
-    font-family: var(--heading-font);
-}
-
-.product-info tr:first-child td {
-    padding-top: 0;
-}
-
-.product-info tr:last-child td {
-    padding-bottom: 0;
-}
-
-.product-info tr td strong {
-    font-size: 17px;
 }
 
 .product-varient {
@@ -150,6 +79,10 @@
 .product-varient-title {
     font-size: 17px;
     text-transform: capitalize;
+}
+
+.product-varient-title strong:last-child{
+    margin: 0 0 0 5px;
 }
 
 .product-varient-popup-btn {
@@ -171,7 +104,6 @@
 
 .product-varient-input-field {
     position: relative;
-    cursor: pointer;
 }
 
 .product-varient-input {
@@ -222,7 +154,7 @@
     color: var(--white);
 }
 
-.product-varient-input-field.disabled {
+.product-varient-input-field.disabled label{
     opacity: 0.4;
     cursor: no-drop;
 }
@@ -230,6 +162,26 @@
 .product-varient-input-field.disabled .product-varient-label {
     cursor: no-drop;
     text-decoration: line-through;
+}
+
+.label-details {
+    font-size: 10px;
+    margin: 2px 0 0 0;
+    color: var(--brand-color);
+    font-weight: 700;
+    text-transform: capitalize;
+}
+
+.product-details-popup-wrap {
+    margin: 20px 0 0 0;
+}
+
+.product-details-popup-btn {
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: capitalize;
+    cursor: pointer;
+    display: inline-block;
 }
 
 .product-color-varient-field-wrap {
@@ -354,6 +306,22 @@
     justify-content: center;
     gap: 10px;
     padding: 15px 10px;
+}
+
+.product-desription-link-wrap{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    margin: 20px 0 0 0;
+}
+
+.product-desription-link{
+    color: var(--paragraph-text-color);
+    font-family: var(--paragraph-font);
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: capitalize;
 }
 
 .product-description-accordion {
