--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,74 +1,191 @@
-.contact-page-banner {
-    background-image: url("../images/contact-banner.jpg");
+/* contact-section css start */
+.contact-section {
+    background-image: url("../images/contact-section-bg.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-.contact-form {
-    max-width: 800px;
+.section.contact-section {
+    padding-bottom: 680px;
+}
+
+.account-section .contact-wrapper {
+    max-width: 550px;
+    width: 100%;
     margin: 0 auto;
-    width: 100%;
-    padding: 20px;
-    box-shadow: 0 0 20px 0px rgb(0 0 0 / 10%);
 }
 
-.contact-field-row {
+.contact-items {
     display: grid;
+    row-gap: 30px;
+    column-gap: 30px;
+}
+
+.account-section .contact-items {
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 20px;
 }
 
-.contact-field-col {
-    width: 100%;
-    margin: 0 0 20px 0;
+.contact-item {
+    position: relative;
 }
 
-.contact-field-col input,
-.contact-field-col textarea {
+.contact-item.text-align-left input {
+    text-align: left;
+}
+
+.contact-item input,
+.contact-item select {
     width: 100%;
     height: 50px;
-    padding: 0 10px;
     border: 1px solid var(--border-color);
+    text-align: center;
+    padding: 0 16px;
 }
 
-.contact-field-col textarea {
-    padding: 15px 10px;
-    height: 100%;
-    resize: none;
+.input-field-btn {
+    cursor: pointer;
+    color: var(--paragraph-text-color);
+    font-size: 12px;
+    font-weight: 400;
+    font-family: var(--paragraph-font);
+    position: absolute;
+    top: 50%;
+    right: 16px;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
 }
 
-.contact-field-col input:focus,
-.contact-field-col textarea:focus {
-    border-color: var(--brand-color);
+.contact-item-wrap p {
+    text-align: center;
+    font-size: 10px;
+    line-height: 16px;
+    margin: 2px 0 0 0;
+    font-weight: 500;
+    color: var(--brand-color);
+    opacity: 0.7;
 }
 
-.contact-field-col:hover input,
-.contact-field-col:hover textarea {
-    border-color: var(--brand-color);
+.contact-checkbox-area {
+    margin: 15px auto 0;
+    max-width: 450px;
+}
+
+.contact-checkbox-field {
+    display: block;
+    margin: 0 0 10px 0;
+}
+
+.contact-checkbox-field:last-child {
+    margin: 0;
+}
+
+.contact-checkbox-field input {
+    padding: 0;
+    height: initial;
+    width: initial;
+    margin-bottom: 0;
+    display: none;
+    cursor: pointer;
+}
+
+.contact-checkbox-field label {
+    position: relative;
+    cursor: pointer;
+    color: var(--black);
+    font-size: 12px;
+    font-family: var(--paragraph-font);
+    font-weight: 400;
+    text-transform: capitalize;
+    user-select: none;
+    display: block;
+    line-height: 18px;
+}
+
+.contact-checkbox-field label:before {
+    content: '';
+    -webkit-appearance: none;
+    background-color: transparent;
+    border: 2px solid var(--brand-color);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+    padding: 8px;
+    display: inline-block;
+    position: relative;
+    vertical-align: middle;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.contact-checkbox-field input:checked+label:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 3px;
+    left: 8px;
+    width: 3px;
+    height: 9px;
+    border: solid var(--brand-color);
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
 }
 
 .contact-btn {
+    margin: 50px 0 0 0;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .contact-btn .btn {
     width: 100%;
 }
 
-@media only screen and (max-width: 767px) {
-    /* contact section css start */
-    .contact-field-row {
-        grid-template-columns: repeat(1, 1fr);
-    }
-    /* contact section css end */
+.contact-btn a:last-child {
+    margin: 50px 0 0 0;
 }
 
+.contact-btn .contact-link {
+    color: var(--black);
+    font-size: 12px;
+    font-family: var(--paragraph-font);
+    font-weight: 400;
+    margin: 10px 0 0 0;
+    text-align: center;
+}
+
+.login-section .contact-wrapper{
+        max-width: 408px;
+        width: 100%;
+        margin: 0 auto;
+}
+
+.login-section .contact-items{
+    grid-template-columns: repeat(1, 1fr);
+}
+
+
+/* contact-section css end */
+
 @media only screen and (max-width: 575px) {
-    /* contact section css start */
-    .contact-field-row {
-        column-gap: 10px;
+    /* contact-section css start */
+    .section.contact-section {
+        padding-bottom: 300px;
     }
 
-    .contact-field-col {
-        margin: 0 0 10px 0;
+    .contact-items {
+        row-gap: 16px;
+        column-gap: 0;
     }
-    /* contact section css end */
+
+    .account-section .contact-items {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .contact-item input, .contact-item select {
+        height: 45px;
+    }
+    /* contact-section css end */
 }
