--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -448,9 +448,12 @@
     -moz-transition: all ease .3s;
     -ms-transition: all ease .3s;
     -o-transition: all ease .3s;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    padding: 50px 0;
 }
 
-.product-details-popup.active{
+.product-details-popup.active {
     opacity: 1;
     visibility: visible;
     transform: scale(1);
@@ -460,7 +463,7 @@
     -o-transform: scale(1);
 }
 
-.size-guide-popup.active{
+.size-guide-popup.active {
     opacity: 1;
     visibility: visible;
     transform: scale(1);
@@ -479,10 +482,6 @@
     width: 50%;
     background-color: var(--card-bg);
     z-index: -1;
-    height: 100%;
-}
-
-.product-details-wrapper .container {
     height: 100%;
 }
 
@@ -524,9 +523,10 @@
 }
 
 .product-details-content-inner {
-    max-width: 534px;
+    max-width: 554px;
     margin: 0 auto;
     text-align: center;
+    padding: 0 20px;
 }
 
 .product-details-content-heading {
@@ -539,7 +539,7 @@
     margin: 0 0 30px 0;
 }
 
-.product-details-content-text{
+.product-details-content-text {
     margin: 0 auto 30px;
 }
 
@@ -561,11 +561,11 @@
     margin: 0 0 7px 0;
 }
 
-.product-details-size-text{
+.product-details-size-text {
     margin: 30px 0 0 0;
 }
 
-.product-details-page-logo{
+.product-details-page-logo {
     width: 35px;
     height: 35px;
     margin: 30px auto 0;
@@ -577,29 +577,32 @@
     padding: 0 20px;
 }
 
-.product-size-content-title{
+.product-size-content-title {
     text-transform: uppercase;
-    margin: 0 0 30px 0;
+    margin: 0 auto 50px;
     text-align: center;
+    color: var(--white);
+    background-color: var(--black);
+    width: fit-content;
 }
 
-.product-size-content-wrap{
+.product-size-content-wrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 20px;
 }
 
-.product-size-content-img{
+.product-size-content-img {
     max-width: 400px;
     width: 100%;
 }
 
-.product-size-content-img img{
+.product-size-content-img img {
     object-fit: contain;
 }
 
-.product-size-content{
+.product-size-content {
     max-width: 285px;
     width: 100%;
 }
@@ -609,16 +612,36 @@
     font-weight: 500;
 }
 
-.product-size-content ul{
+.product-size-content ul {
     margin: 30px 0 0 0;
 }
 
-.product-size-content ul li{
+.product-size-content ul li {
     margin: 0 0 5px 0;
 }
 
-.product-size-content ul li:last-child{
+.product-size-content ul li:last-child {
     margin: 0;
+}
+
+.size-chat-area {
+    margin: 50px 0 0 0;
+    text-align: center;
+}
+
+.size-chat-title {
+    display: inline-block;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 0 0 20px 0;
+    background-color: var(--black);
+    color: var(--white);
+}
+
+.size-chat-img {
+    max-width: 460px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 /* product section css end */
@@ -655,6 +678,66 @@
         max-width: 100%;
         padding: 0;
     }
+
+    .product-size-content-wrap {
+        flex-wrap: wrap;
+    }
+
+    .product-size-content-img {
+        max-width: 300px;
+        margin: 0 auto;
+    }
+
+    .product-size-content {
+        max-width: 100%;
+    }
+
+    .product-size-content-title {
+        margin: 0 auto 20px;
+    }
+    /* product section css end */
+}
+
+@media only screen and (max-width: 767px) {
+
+    /* product section css start */
+    .product-details-inner {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+    }
+
+    .product-details-wrapper::after {
+        display: none;
+    }
+
+    .product-details-img {
+        width: 100%;
+    }
+
+    .product-details-content-inner {
+        max-width: 100%;
+    }
+
+    .product-details-content-heading {
+        margin: 0 0 10px 0;
+    }
+
+    .product-details-content-title {
+        margin: 0 0 10px 0;
+    }
+
+    .product-details-content-text {
+        margin: 0 auto 10px;
+    }
+
+    .product-details-size-text {
+        margin: 10px 0 0 0;
+    }
+
+    .product-details-page-logo {
+        margin: 10px auto 0;
+    }
+
     /* product section css end */
 }
 
